--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="enter_todo_item">Enter Todo Item</string>
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
+    <string name="todo_item">Todo Item</string>
 </resources>
